Add docs to flytekit-java module #patch (#189)
* WIP add docs done to SdkContainerTask

...and few minor code clean

Signed-off-by: Nelson Arapé <nelson@spotify.com>

* WIP add docs done to SdkWorkflowBuilder

...and few minor code clean

Signed-off-by: Nelson Arapé <nelson@spotify.com>

* Make it compile

Signed-off-by: Nelson Arapé <nelson@spotify.com>

* More docs

Signed-off-by: Nelson Arapé <nelson@spotify.com>

* Minor fixes

Signed-off-by: Nelson Arapé <nelson@spotify.com>

---------

Signed-off-by: Nelson Arapé <nelson@spotify.com>